--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 creditcard.csv filter=lfs diff=lfs merge=lfs -text
+/home/martinez_felipe/Programação/Python_Programas/Diversos/Detector_FraudeAI/creditcard.csv filter=lfs diff=lfs merge=lfs -text
