--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.psd filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -csv
 /home/martinez_felipe/Programação/Python_Programas/Diversos/Detector_FraudeAI/creditcard.csv filter=lfs diff=lfs merge=lfs -text
